--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore .",
     "lint:style": "stylelint src/**/*.{css,scss,vue}",
-    "lint:markup": "vue-tsc --noEmit"
+    "lint:markup": "vue-tsc --noEmit",
+    "firebase": "firebase"
   },
   "dependencies": {
     "firebase": "^9.19.1",
