feat: add firebase integration and fetch questions

--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "preview": "vite preview",
     "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore .",
     "lint:style": "stylelint src/**/*.{css,scss,vue}",
-    "lint:markup": "vue-tsc --noEmit",
-    "firebase": "firebase"
+    "lint:markup": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "firebase": "^9.19.1",
+    "firebase": "^9.21.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
