--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
       "@/*": ["./*"]
     },
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/firebase.ts"],
   "references": [{ "path": "./tsconfig.node.json" }],
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
