--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.21.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
+    "vue3-spinner": "^0.0.17",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
