--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "firebase": "^9.21.0",
+    "gitart-vue-dialog": "^3.1.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vue3-spinner": "^0.0.17",
