--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "firebase": "^9.21.0",
     "gitart-vue-dialog": "^3.1.0",
+    "pica": "^9.0.1",
     "uuid": "^9.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
+    "@types/pica": "^9.0.1",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
