--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,7 @@
     "rules": "database.rules.json"
   },
   "hosting": {
+    "target": "savage-cabbage",
     "public": "dist",
     "ignore": [
       "firebase.json",
